fix blog posts alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -964,7 +964,6 @@ body {
 .blog-post-item {
     margin: 3.5em 0;
     padding-bottom: 3em;
-    text-align: center;
     @media @mobile {
         margin: 2.5em 0;
         padding-bottom: 2em;
@@ -973,12 +972,10 @@ body {
         background-size: cover;
         background-repeat: no-repeat;
         height: 400px;
-        width: 600px;
         background-position: center;
         margin: 2em auto;
         @media @tablet {
             height: 300px;
-            width: 450px;
         }
         @media @mobile {
             width: 100%;
